# mobile_robot_avoid_obstacle

./: README.md  package.xml  turtlebot3_teleop_key
msg_tutorials/: CMakeLists.txt  setup.py
msg_tutorials/scripts/: custom_publisher  custom_subscriber
msg_tutorials/src/Pubmsg/: Msg_Publisher.py
msg_tutorials/src/Submsg/: Msg_Subscriber.py
scripts/: custom_subscriber
simple_autonomous/: CMakeLists.txt  package.xml  setup.py
simple_autonomous/launch/: turtlebot3_simple_autonomous.launch
simple_autonomous/scripts/: simple_autonomous_run
topic_tutorials/: CMakeLists.txt  package.xml
topic_tutorials/src/: Publisher.py  Subscriber.py
